<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    >
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.Light"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">


    <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:titleTextColor="@color/white"
            android:background="@color/blue"
            app:title="@string/app_name" />
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_editor_absoluteX="0dp"
        app:layout_editor_absoluteY="0dp"
        >

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/DarkMode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_gravity="end"
            android:textColor="@color/blue"
            android:text="@string/dark_mode"
            tools:ignore="VisualLintButtonSize" />

        <ImageView
            android:id="@+id/mainImage"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/portfolio_image"
            android:src="@drawable/mileaniekheraprofile" />

        <TextView
            android:id="@+id/Name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:gravity="center"
            android:textColor="@color/blue"
            android:layout_marginTop="20dp"
            android:textSize="24sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/Designation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/blue"
            android:padding="5dp"
            android:textSize="19sp"
            android:textStyle="normal|italic"
            android:gravity="center"
            android:text="@string/designation" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="93dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/skillsButton"
                style="?android:buttonBarButtonStyle"
                android:layout_width="140dp"
                android:layout_height="55dp"
                android:layout_margin="15dp"
                android:layout_weight="1"
                android:padding="12dp"
                android:text="@string/skills"
                android:textColor="@color/blue"
                android:textSize="16sp"
                tools:ignore="VisualLineButtonSize,VisualLintButtonSize" />

            <Button
                android:id="@+id/experienceButton"
                style="?android:buttonBarButtonStyle"
                android:layout_width="140dp"
                android:layout_height="55dp"
                android:layout_margin="15dp"
                android:layout_weight="1"
                android:padding="12dp"
                android:text="@string/experience"
                android:textColor="@color/blue"
                android:textSize="16sp"
                tools:ignore="VisualLineButtonSize,VisualLintButtonSize" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="93dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/educationButton"
                style="?android:buttonBarButtonStyle"
                android:layout_width="140dp"
                android:layout_height="55dp"
                android:layout_margin="15dp"
                android:layout_weight="1"
                android:padding="12dp"
                android:text="@string/education"
                android:textColor="@color/blue"
                android:textSize="16sp"
                tools:ignore="VisualLineButtonSize,VisualLintButtonSize" />

            <Button
                android:id="@+id/achievementButton"
                style="?android:buttonBarButtonStyle"
                android:layout_width="140dp"
                android:layout_height="55dp"
                android:layout_margin="15dp"
                android:layout_weight="1"
                android:padding="12dp"
                android:text="@string/achievement"
                android:textColor="@color/blue"
                android:textSize="16sp"
                tools:ignore="VisualLineButtonSize,VisualLintButtonSize" />
        </LinearLayout>
        <Space
            android:id="@+id/dividerSpace"
            android:layout_width="match_parent"
            android:layout_height="50dp"/>

        <Button
            android:id="@+id/contactMe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact_me"
            style="@style/CustomButtonStyle"
            android:elevation="5dp"
            android:layout_gravity="center_horizontal"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>